# webrtc-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: camera-head-tracker.js  camera-head-tracker.test.js  head-tracker.js  head-tracker.test.js  index.html  landmark-to-yaw.js  landmark-to-yaw.test.js  package-lock.json  package.json  room-viz.js  room-viz.test.js  spatial-audio.js  spatial-audio.test.js  spatial-viz.js  spatial-viz.test.js  webrtc.js  webrtc.test.js
head_tracking/: camera_head_tracker.py  head_tracker.py  landmark_to_yaw.py
server/: bridge.py  http_server.py  signaling.py
spatial_audio/: spatial_audio.py
tests/: test_camera_head_tracker.py  test_head_tracker.py  test_landmark_to_yaw.py  test_room_viz.py  test_signaling.py  test_spatial_audio.py  test_spatial_viz.py
viz/: room_viz.py  spatial_viz.py
